modifed .css file

--- a/index.html
+++ b/index.html
@@ -28,17 +28,29 @@
             <img src="smiling.jpg" alt="girl">
             <h2>Martina Hirsch</h2>
             <ul>
-                <li><a href=""><i class="fab fa-facebook-f fa-2x"></i></a></li>
-                <li><a href=""><i class="fab fa-twitter fa-2x"></i></a></li>
-                <li><a href=""><i class="fab fa-linkedin-in fa-2x"></i></a></li>
+                <li>
+                    <a href="">
+                        <i class="fab fa-facebook-f fa-2x"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <i class="fab fa-twitter fa-2x"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <i class="fab fa-linkedin-in fa-2x"></i>
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
+
    
 
 
 
-    
 </body>
 
 </html>
